# cps-energy-tools

./: .dockerignore  .gitignore  Dockerfile  FIXES_APPLIED.md  MattsMRR.py  README.md  SPIDA_IMPORT_FIX_SUMMARY.md  app.py  debug_cover_sheet.py  docker-compose.yml  engineering_templates.json  package-lock.json  package.json  pyproject.toml  requirements.txt  spida_utils.py  spidaqc.py  test_api_endpoints.py  test_fixed_endpoints.py  test_heroku_deployment.py
api/data/: engineering_templates.json  insulator_specs.json
backend/: __init__.py  main.py
backend/cps_tools/api/: __init__.py  cover_sheet.py  exports.py  mrr_process.py  pole_compare.py  qc.py  (+2 more)
cps_tools/: __init__.py  settings.py
cps_tools/core/: __init__.py
cps_tools/legacy/: __init__.py
data/: spidacalc-v11-schema.json
docs/: cover_sheet_tool.md  how_to_guide.md  mrr_tool.md  pole_comparison_tool.md  spidaqc.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: MattsMRR.py  cover_sheet_tool.py  how_to_guide.py  import.py  pole_comparison_tool.py  spida_utils.py  spidaqc.py
static/css/: style.css
static/js/: pole_comparison_results.js
templates/: base.html  cover_sheet.html  how_to_guide.html  index.html  mrr_tool.html  pole_comparison.html  spida_import.html  spidacalc_qc.html
templates/partials/: pole_comparison_table.html
uploads/: CPS_6396E_04_for_spidacalc.json  CPS_6457E_03_Kata.json  CPS_6457E_03_Kata_MRR_Output.xlsx  CPS_6457E_03_Kata_for_spidacalc.json  CPS_6457E_03_Node_Attributes_XLSX.xlsx  CPS_6457E_03_for_spidacalc.json
(+26 files in other folders)
