[tool.poetry]
name = "cps-energy-tools"
version = "0.1.0"
description = "A suite of utilities and web APIs for CPS Energy pole assessment & SPIDAcalc integration."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "cps_tools" },
    { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.10"
# --- runtime deps (ported from requirements.txt) ---
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pandas = "^2.0"
xlsxwriter = "^3.0"
openpyxl = "^3.0"
requests = "^2.25"
python-multipart = "*"
jsonschema = "*"
pydantic = "^1.10"
rich = "^13.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
ruff = "^0.1.4"
mypy = "^1.5"
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = "MattsMRR.py"

[tool.ruff]
# Align with Black's 100 char line length
line-length = 100
exclude = [
    "MattsMRR.py",  # keep original formatting untouched
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = "MattsMRR.py" 